--- a/index.html
+++ b/index.html
@@ -93,20 +93,11 @@ img {
     <div class="owl-carousel owl-demo">
 
 			<div class="app_feature_list">
-			<a class="item link" href="location_3676.html" rel="external" data-ajax="flase"  >
-																	<img src="images/location.png " />
-										</a>
-		<a href="location_3676.html" rel="external" data-ajax="flase"  >
-				<label>Location</label>
-		</a>
-	</div>
-
-			<div class="app_feature_list">
 			<a class="item link" href="staticpage_3677.html" rel="external" data-ajax="flase"  >
-																	<img src="images/staticpage.png " />
+																	<img src="icon(238).png" />
 										</a>
 		<a href="staticpage_3677.html" rel="external" data-ajax="flase"  >
-				<label>StaticPage</label>
+				<label>Multi_pages</label>
 		</a>
 	</div>
 
