--- a/staticpage_3677_7050.html
+++ b/staticpage_3677_7050.html
@@ -68,9 +68,9 @@ img {
 
   <!-- Header Starts Here -->
 
-  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
+  <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/back_btn.png" alt="home icon" /></a>
 
-    <h1>Multi_pages</h1>
+    <h1>page_address one</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -80,20 +80,13 @@ img {
 
   
 
-  <div class="staticPageList">
-<ul data-role="listview" >
-	 <li><a rel="external" data-ajax="flase"  class="item link" href="staticpage_3677_7050.html">
-                                	<img src="http://app-gorilla.com/members/wizard/mediafiles/amitoj_4_43/thumb/amitoj_4_1394527088_256x256.jpg" class="ui-li-thumb">
-                                <h2>
-                page_address one                </h2>
-                <p>Hello some sort of address to test that part some sort of added functionlit</p>
-                
-            </a></li>
-	
-	
-</ul>
-</div>
+  <div class="staticPage">
 
+  
+
+  Hello some sort of address to test that part some sort of added functionlity<br>
+
+  </div>
 
   
 
