--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@ img {
 
 			<div class="app_feature_list">
 			<a class="item link" href="video_3679.html" rel="external" data-ajax="flase"  >
-																	<img src="images/video.png " />
+																	<img src="icon(64).png" />
 										</a>
 		<a href="video_3679.html" rel="external" data-ajax="flase"  >
-				<label>Videos</label>
+				<label>playing_video</label>
 		</a>
 	</div>
 
