--- a/video_3679.html
+++ b/video_3679.html
@@ -86,7 +86,7 @@ $(document).ready(function(){
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
 
-    <h1>Video</h1>
+    <h1>Playing_video</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -98,7 +98,7 @@ $(document).ready(function(){
 
   <a href="index.html" class="refresh_link ui-link ui-btn-left ui-btn ui-shadow ui-corner-all" data-role="button" rel="external" data-ajax="false" role="button"><img alt="home icon" src="images/home_icon.png"></a>
 
-    <h1>Video</h1>
+    <h1>Playing_video</h1>
 
     <a class="help_link ui-link ui-btn-right ui-btn ui-shadow ui-corner-all" data-role="button" role="button"><img alt="help icon" src="images/help_icon.png"></a> </div>
 
@@ -114,7 +114,24 @@ $(document).ready(function(){
 
 	
 
-			<p class="no_data">No video upload</p>
+			    <ul data-role="listview"><li><a href='video_detail_498.html'><img src='https://i1.ytimg.com/vi/vU8jUKc0Xbk/hqdefault.jpg'  /><h2>Annoying Orange Let's Play! - MINECRAFT</h2><p>HEY! Play my new mobile game Splatter Up now! It's FREE!
+FREE iOS Splatter Up: http://bit.ly/Splatte</p></a></li><li><a href='video_detail_499.html'><img src='https://i1.ytimg.com/vi/LYdk2vwyEuk/hqdefault.jpg'  /><h2>Annoying Orange Vs. Fruit Ninja</h2><p>NINJA SMOKE! HAHAHA!
+
+MERCH: http://bit.ly/18PhFlH
+T-SHIRTS! http://bit.ly/AOMerch
+MUSIC! http://bit</p></a></li><li><a href='video_detail_500.html'><img src='https://i1.ytimg.com/vi/X2bA1O6Oj7E/hqdefault.jpg'  /><h2>Annoying Orange - Annoying Orange vs Duck Hunt</h2><p>Orange takes on a fowl situation. HA. Get it? FOWL?
+The Annoying Orange DVD is here!!! http://youtu.</p></a></li><li><a href='video_detail_501.html'><img src='https://i1.ytimg.com/vi/j521FwIsAM8/hqdefault.jpg'  /><h2>Annoying Orange - Annoying Orange Vs. Minecraft</h2><p>HEY! Play my new mobile game Splatter Up now! It's FREE!
+FREE iOS Splatter Up: http://bit.ly/Splatte</p></a></li><li><a href='video_detail_502.html'><img src='https://i1.ytimg.com/vi/kreZPmSGZfM/hqdefault.jpg'  /><h2>Annoying Orange vs Pong</h2><p>Surprise Monday video! Orange invades the most exciting game ever created. 
+
+MERCH: http://bit.ly/18</p></a></li><li><a href='video_detail_503.html'><img src='https://i1.ytimg.com/vi/Cv-Zjc_5w6A/hqdefault.jpg'  /><h2>Annoying Orange Vs. Slender</h2><p>HEY! Play my new mobile game Splatter Up now! It's FREE!
+FREE iOS Splatter Up: http://bit.ly/Splatte</p></a></li><li><a href='video_detail_504.html'><img src='https://i1.ytimg.com/vi/UtEP1pYTNKg/hqdefault.jpg'  /><h2>Annoying Orange vs. Mortal Kombat</h2><p>FREE iOS Splatter Up: http://bit.ly/SplatterUpFreeiOS
+FREE Google Play Splatter Up: http://bit.ly/Sp</p></a></li><li><a href='video_detail_505.html'><img src='https://i1.ytimg.com/vi/44NFSbjjGl4/hqdefault.jpg'  /><h2>Annoying Orange vs Angry Birds</h2><p>Orange and the gang try their hand at taking out those pesky pigs!
+
+FREE version of my video game Ki</p></a></li><li><a href='video_detail_506.html'><img src='https://i1.ytimg.com/vi/vMxwPgzF4ME/hqdefault.jpg'  /><h2>Annoying Orange - Super Mario</h2><p>Mario tries to save princess. Orange gets in his way.
+
+FREE version of my video game Kitchen Carnage</p></a></li><li><a href='video_detail_507.html'><img src='https://i1.ytimg.com/vi/xdINlGCoAcU/hqdefault.jpg'  /><h2>Annoying Orange - Grapefruit Vs. Donkey Kong</h2><p>HEY! Play my new mobile game Splatter Up now! It's FREE!
+FREE iOS Splatter Up: http://bit.ly/Splatte</p></a></li></ul>
+
 
             
 
